figured out where sublime was trying to pull from and whacked it. adding proper repo

--- a/config/default.yml
+++ b/config/default.yml
@@ -16,6 +16,7 @@ attributes:
             - iterm2
             - vagrant
             - intellij-idea-ce
+            - sublime-text
         cask_fonts:
             - inconsolata
     nodejs:
